# ece15

./: .gitignore  README.md  debug  setOPM  update
Scribus/: CMakeLists.txt  README.branch.numeration  README_IMPOSER  Scribus.pro  Scribus.pro.orig  Scribus.pro.rej  Scribus.pro.user.f3df963  TODO
Scribus/cmake/modules/: FindPOPPLER.cmake
Scribus/scribus/: CMakeLists.txt  actionmanager.cpp  annotation.h  canvas.cpp  canvas.h  canvasgesture_resize.cpp  canvasgesture_rulermove.cpp  canvasgesture_textcolumnresize.cpp  canvasgesture_textcolumnresize.h  canvasmode.cpp  canvasmode.h  canvasmode_copyproperties.cpp  canvasmode_create.cpp  canvasmode_drawcalligraphic.cpp  canvasmode_drawfreehand.cpp  canvasmode_edit.cpp  canvasmode_editmeshgradient.h  canvasmode_edittable.cpp  canvasmode_framelinks.cpp  canvasmode_measurements.cpp  canvasmode_normal.cpp  collect4output.cpp  colorsetmanager.cpp  colorsetmanager.h  documentchecker.cpp  fileloader.cpp  filewatcher.h  gtaction.cpp  gtaction.h  gtgettext.cpp  gtgettext.h  gtparagraphstyle.cpp  gtparagraphstyle.h  gtwriter.cpp  gtwriter.h  guidemanagercore.cpp  guidemanagercore.h  guidesdelegate.cpp  hyphenator.cpp  hyphenator.h  (+85 more)
Scribus/scribus/imposition/: CMakeLists.txt  imposition.cpp  imposition.h  impositioninputfile.cpp  impositioninputfile.h  impositionoptions.cpp  impositionoptions.h  impositionoutputfile.cpp  impositionoutputfile.h
Scribus/scribus/plugins/textvalidator/: CMakeLists.txt  prefs_textvalidator.cpp  prefs_textvalidator.h  prefs_textvalidator.ui  textvalidator.cpp  textvalidator.h  textvalidatorimpl.cpp  textvalidatorimpl.h  tvconfig.cpp  tvconfig.h  tvdialog.cpp  tvdialog.h  tvdialog.ui  tvprefsgui.cpp  tvprefsgui.h
(+449 files in other folders)
